--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 node_modules
+dist
 
 # local env files
 .env.local
@@ -20,3 +21,5 @@ yarn-error.log*
 *.sw?
 
 yarn.lock
+vue.config.js
+
